--- a/src/Asteroids/Asteroids.Client/Components/Layout/MainLayout.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Layout/MainLayout.razor
@@ -16,6 +16,8 @@
     </main>
 </div>
 
+<BlazoredToasts />
+
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
