--- a/src/Asteroids/Asteroids.Client/Components/Pages/CreateAccountPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/CreateAccountPage.razor
@@ -1,12 +1,13 @@
 ﻿@page "/createaccount"
 @inject NavigationManager Navigation
 @inject ILogger<CreateAccountPage> Logger
+@inject IToastService toastService
 
 <h3>Create Account</h3>
 
 <div class="form-group my-2">
     <label for="username">Username:</label>
-    <input id="username" class="form-control" @bind-value="@username" @bind-value:event="oninput" style="max-width: 300px;" />
+    <input id="username" class="form-control" @bind-value="@Username" @bind-value:event="oninput" style="max-width: 300px;" />
 </div>
 
 <div class="form-group my-2">
