--- a/src/Asteroids/Asteroids.Client/Components/Pages/LoginPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LoginPage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/login"
 @using Microsoft.AspNetCore.SignalR.Client
 @inject NavigationManager Navigation
+@inject IToastService ToastService
 
 <h3>Login</h3>
 
