replace errors with error toasts

--- a/src/Asteroids/Asteroids.Client/Components/Layout/MainLayout.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Layout/MainLayout.razor
@@ -16,7 +16,7 @@
     </main>
 </div>
 
-<BlazoredToasts />
+<BlazoredToasts Position="Blazored.Toast.Configuration.ToastPosition.TopCenter" />
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
