--- a/src/Asteroids/Asteroids.Client/Components/Pages/LoginPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LoginPage.razor
@@ -1,7 +1,9 @@
 ﻿@page "/login"
+@using Asteroids.Client.Services
 @using Microsoft.AspNetCore.SignalR.Client
 @inject NavigationManager Navigation
 @inject IToastService ToastService
+@inject SessionService SessionService;
 
 <h3>Login</h3>
 
