--- a/src/Asteroids/Asteroids.Client/Components/Layout/MainLayout.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@inject SessionService SessionService
+@inject NavigationManager Navigation
 
 <div class="page">
     <div class="sidebar">
@@ -7,7 +9,15 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            @if (loginVisible)
+            {
+                <button class="btn btn-link" @onclick="@(() => Navigation.NavigateTo("/login"))">Login</button>
+                <button class="btn btn-link" @onclick="@(() => Navigation.NavigateTo("/createaccount"))">Create Account</button>
+            }
+            else
+            {
+                <button class="btn btn-link" @onclick="Logout">Logout</button>
+            }
         </div>
 
         <article class="content px-4">
@@ -23,3 +33,19 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code {
+    private bool loginVisible = false;
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        var sessionExists = await SessionService.SessionExists();
+        loginVisible = !sessionExists;
+    }
+
+private async Task Logout()
+    {
+        await SessionService.ClearSession();
+        Navigation.NavigateTo("/login");
+    }
+}
