--- a/src/Asteroids/Asteroids.Client/Components/_Imports.razor
+++ b/src/Asteroids/Asteroids.Client/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using Blazored.Toast
 @using Blazored.Toast.Services
 @using Asteroids.Client.Services
+@using Asteroids.Client.Components.Layout
