--- a/src/Asteroids/Asteroids.Client/Components/Layout/AuthenticatedNavMenu.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Layout/AuthenticatedNavMenu.razor
@@ -9,8 +9,8 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Lobbies
+            <NavLink class="nav-link" href="/lobbies" Match="NavLinkMatch.All">
+                <span class="bi bi-controller-fill-nav-menu" aria-hidden="true"></span> Lobbies
             </NavLink>
         </div>
     </nav>
