--- a/src/Asteroids/Asteroids.Client/Components/Pages/LobbiesPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LobbiesPage.razor
@@ -10,7 +10,7 @@
 <p>@SessionActorPath</p>
 
 <input type="text" @bind-value="lobbyName" @bind-value:event="oninput" placeholder="Lobby Name" class="form-control w-25"  />
-<button class="btn btn-primary my-2" @onclick="CreateLobby" disabled="@(string.IsNullOrEmpty(lobbyName))" >Create Lobby</button>
+<button class="btn btn-primary my-2" @onclick="CreateLobby" disabled="@(string.IsNullOrEmpty(lobbyName) || lobbyName.Length > 25)" >Create Lobby</button>
 
 @if (lobbies == null)
 {
