Login and Create Lobbies / View Lobby (#5)
* Create login/create account pages. Figure out strongly typed signalrhub proof of concept

* Connect actor system to signalr system

* message requests can be routed through actor system and respond to original client

* this is kind of ridiculous

* Use akka hosting for easier setup

* Working account creation

* try tests wip

* some refactoring

* failed login sends a toast

* replace errors with error toasts

* Can log in, store session in local storage

* format

* logout button

* wip

* can create/view lobbies

* format

* limit lobby name length

--- a/src/Asteroids/Asteroids.Client/Components/_Imports.razor
+++ b/src/Asteroids/Asteroids.Client/Components/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using Asteroids.Client
 @using Asteroids.Client.Components
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using Asteroids.Client.Services
+@using Asteroids.Client.Components.Layout
