can join lobby and redirect to lobby page

--- a/src/Asteroids/Asteroids.Client/Components/Pages/LobbiesPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LobbiesPage.razor
@@ -4,6 +4,7 @@
 @page "/lobbies"
 @inject NavigationManager Navigation
 @inject SessionService SessionService
+@inject IToastService ToastService
 
 <h3>Lobbies</h3>
 
