can join a lobby, and query for lobby state

--- a/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
@@ -3,5 +3,5 @@
 @inject NavigationManager Navigation
 @inject SessionService SessionService
 @inject IToastService ToastService
-<h3>Lobby @LobbyId</h3>
+<h3>Lobby @CurrentGameState?.Lobby.Name</h3>
 
