display ship and background

--- a/src/Asteroids/Asteroids.Client/Components/_Imports.razor
+++ b/src/Asteroids/Asteroids.Client/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using Blazored.Toast.Services
 @using Asteroids.Client.Services
 @using Asteroids.Client.Components.Layout
+@using Asteroids.Client.Components.Game
