--- a/src/Asteroids/Asteroids.Client/wwwroot/app.css
+++ b/src/Asteroids/Asteroids.Client/wwwroot/app.css
@@ -83,3 +83,15 @@ h1:focus {
 .darker-border-checkbox.form-check-input {
   border-color: #929292;
 }
+
+.space-landscape{
+    background-image: url(landscape.jpg) !important;
+    background-position: center;
+    background-size: contain;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 800px;
+    position: relative;
+    overflow: hidden;
+}
