--- a/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
@@ -22,6 +22,8 @@
 @if (CurrentGameState?.State == Shared.Lobbies.LobbyState.Playing)
 {
     <div>
+        <button class="btn btn-primary my-2" @onclick="@(()=>HandleKeyDownAsync("w"))">spin</button>
         <Landscape Players="CurrentGameState.Players" />
+        <KeyboardListener @ref="keyboardListener" KeyDown="HandleKeyDownAsync" KeyUp="HandleKeyUp" />
     </div>
 }
