--- a/src/Asteroids/Asteroids.Client/Components/Game/ShipSprite.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Game/ShipSprite.razor
@@ -16,32 +16,33 @@
         }
     }
 
-      .sprite {
-          position: absolute;
-      }
+    .sprite {
+        position: absolute;
+    }
 
-          .sprite img {
-            transition: all .1s linear;
-          }
-          
+    .sprite img {
+        transition: all .1s linear;
+    }
 </style>
 
-<div class="sprite" style="@($"position:absolute; right: {Player.Location.X}px; bottom: {Player.Location.Y}px; transform: translate(50%, -50%);")">
+<div class="sprite"
+    style="@($"position:absolute; right: {Player.Location.X}px; bottom: {Player.Location.Y}px; transform: translate(50%, -50%);")">
     <div class="position-relative">
         @if (Player.IsAlive)
         {
-            <img src="@GetShipSvg()" alt="" height="80" width="80" style="rotate: @(Player.Heading.Angle - 90)deg;">
+            <img src="@GetShipSvg()" alt="" height="40" width="40" style="rotate: @(Player.Heading.Angle - 90)deg;">
         }
         else
         {
-            <img src="Assets/explosion.png" class="fade-out" height="90px" width="90px" style="position: absolute; top:-46px; left:-26px;" />
+            <img src="Assets/explosion.png" class="fade-out" height="90px" width="90px"
+                style="position: absolute; top:-46px; left:-26px;" />
         }
     </div>
     @if (Player.IsAlive)
     {
         <div class="progress bg-success rounded-0" style="height: 3px; transform: translate(0px, -4px);">
             <div class="progress-bar bg-dark" role="progressbar" style="width: @(100 - Player.Health)%"
-                 aria-valuenow="@(100 - Player.Health)" aria-valuemin="0" aria-valuemax="100"></div>
+                aria-valuenow="@(100 - Player.Health)" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     }
     <div class="text-truncate small text-white" style="width: 150%">@Player.Name</div>
