Adjust asteroid spawn probability and add transition to sprite in LobbyStateActor.cs and AsteroidSprite.razor

--- a/src/Asteroids/Asteroids.Client/Components/Game/AsteroidSprite.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Game/AsteroidSprite.razor
@@ -18,9 +18,11 @@
 
     .sprite {
         position: absolute;
+        transition: all .05s linear; 
     }
 
     .sprite img {
+        transition: all .05s linear; 
     }
 </style>
 
