--- a/src/Asteroids/Asteroids.Client/Components/Game/Landscape.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Game/Landscape.razor
@@ -1,4 +1,5 @@
-﻿@using Asteroids.Shared.Lobbies
+﻿@using Asteroids.Shared.GameStateEntities
+
 <div class="d-block space-landscape" style="width: @(Width)px; height: @(Height)px">
     @foreach (var player in Players)
     {
