--- a/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
@@ -1,25 +1,26 @@
 ﻿@layout AuthenticatedLayout
+@using Asteroids.Shared.GameStateEntities
 @page "/lobbies/{LobbyId:long}"
 @inject NavigationManager Navigation
 @inject SessionService SessionService
 @inject IToastService ToastService
 
-<h4>Lobby @CurrentGameState?.Lobby.Name - @CurrentGameState?.State</h4>
+<h4>Lobby @CurrentGameState?.Lobby.Name - @CurrentGameState?.Status</h4>
 @if (CurrentGameState == null)
 {
     <p>Loading...</p>
 }
-@if (CurrentGameState?.State == Shared.Lobbies.LobbyState.Joining)
+@if (CurrentGameState?.Status == GameStatus.Joining)
 {
     <button class="btn btn-primary my-2" @onclick="StartGame">Start Game</button>
 }
 
-@if (CurrentGameState?.State == Shared.Lobbies.LobbyState.Countdown)
+@if (CurrentGameState?.Status == GameStatus.Countdown)
 {
-    <p>Game starting in @CurrentGameState.CountDown seconds...</p>
+    <p>Game starting in @CurrentGameState.Countdown seconds...</p>
 }
 
-@if (CurrentGameState?.State == Shared.Lobbies.LobbyState.Playing)
+@if (CurrentGameState?.Status == GameStatus.Playing)
 {
     <div>
         <Landscape Players="CurrentGameState.Players" Asteroids="CurrentGameState.Asteroids" />
