--- a/src/Asteroids/Asteroids.Client/Components/Game/Landscape.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Game/Landscape.razor
@@ -1,16 +1,22 @@
-﻿@using Asteroids.Shared.Lobbies
+﻿@using Asteroids.Shared.GameStateEntities
+
 <div class="d-block space-landscape" style="width: @(Width)px; height: @(Height)px">
     @foreach (var player in Players)
     {
         <ShipSprite Player=@player />
+    }
+    @foreach (var asteroid in Asteroids)
+    {
+        <AsteroidSprite Asteroid=@asteroid />
     }
 </div>
 
 @code {
 
     [Parameter, EditorRequired]
-    public IEnumerable<PlayerStateSnapshot> Players { get; set; } = new
-    List<PlayerStateSnapshot>();
+    public IEnumerable<PlayerStateSnapshot> Players { get; set; } = new List<PlayerStateSnapshot>();
+    [Parameter, EditorRequired]
+    public IEnumerable<AsteroidSnapshot> Asteroids { get; set; } = new List<AsteroidSnapshot>();
     [Parameter] public int Width { get; set; } = 1000;
     [Parameter] public int Height { get; set; } = 1000;
 }
