--- a/src/Asteroids/Asteroids.Client/Components/Game/ShipSprite.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Game/ShipSprite.razor
@@ -1,4 +1,4 @@
-﻿@using Asteroids.Shared.Lobbies
+﻿@using Asteroids.Shared.GameStateEntities
 
 <style>
     .fade-out {
@@ -21,7 +21,6 @@
     }
 
     .sprite img {
-        transition: all .1s linear;
     }
 </style>
 
@@ -44,8 +43,8 @@
             <div class="progress-bar bg-dark" role="progressbar" style="width: @(100 - Player.Health)%"
                 aria-valuenow="@(100 - Player.Health)" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
+        <div class="text-truncate small text-white" style="width: 150%">@Player.Name</div>
     }
-    <div class="text-truncate small text-white" style="width: 150%">@Player.Name</div>
 </div>
 
 @code {
