--- a/src/Asteroids/Asteroids.Client/Components/Pages/LobbiesPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LobbiesPage.razor
@@ -2,6 +2,7 @@
 @inherits AuthenticatedLayout
 @rendermode InteractiveServer
 @page "/lobbies"
+@using Asteroids.Shared.GameStateEntities
 @inject NavigationManager Navigation
 @inject SessionService SessionService
 @inject IToastService ToastService
@@ -10,8 +11,10 @@
 
 <p>@SessionActorPath</p>
 
-<input type="text" @bind-value="lobbyName" @bind-value:event="oninput" placeholder="Lobby Name" class="form-control w-25"  />
-<button class="btn btn-primary my-2" @onclick="CreateLobby" disabled="@(string.IsNullOrEmpty(lobbyName) || lobbyName.Length > 25)" >Create Lobby</button>
+<input type="text" @bind-value="lobbyName" @bind-value:event="oninput" placeholder="Lobby Name"
+    class="form-control w-25" />
+<button class="btn btn-primary my-2" @onclick="CreateLobby"
+    disabled="@(string.IsNullOrEmpty(lobbyName) || lobbyName.Length > 25)">Create Lobby</button>
 
 @if (lobbies == null)
 {
@@ -34,12 +37,19 @@ else
                 </tr>
             </thead>
             <tbody>
-                @foreach (var lobby in lobbies)
+                @foreach (var lobby in lobbies.OrderBy(l => l.Status))
                 {
                     <tr>
                         <td>@lobby.Name</td>
                         <td>@lobby.PlayerCount</td>
-                        <td><button class="btn btn-primary" @onclick="() => JoinLobby(lobby.Id)">Join</button></td>
+                        @if (lobby.Status == GameStatus.Joining)
+                        {
+                            <td><button class="btn btn-primary" @onclick="() => JoinLobby(lobby.Id)">Join</button></td>
+                        }
+                        else
+                        {
+                            <td>@lobby.Status</td>
+                        }
                     </tr>
                 }
             </tbody>
