--- a/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
@@ -23,7 +23,7 @@
 @if (CurrentGameState?.Status == GameStatus.Playing || CurrentGameState?.Status == GameStatus.GameOver)
 {
     <div>
-        <Landscape Players="CurrentGameState.Players" Asteroids="CurrentGameState.Asteroids" />
+        <Landscape Players="CurrentGameState.Players" Asteroids="CurrentGameState.Asteroids" Bullets="CurrentGameState.Bullets" />
         <KeyboardListener @ref="keyboardListener" KeyDown="HandleKeyDownAsync" KeyUp="HandleKeyUp" />
     </div>
 }
