--- a/src/Asteroids/Asteroids.Client/Components/Game/ShipSprite.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Game/ShipSprite.razor
@@ -25,7 +25,7 @@
 </style>
 
 <div class="sprite"
-    style="@($"position:absolute; right: {Player.Location.X}px; bottom: {Player.Location.Y}px; transform: translate(50%, -50%);")">
+    style="@($"position:absolute; right: {Player.Location.X}px; bottom: {Player.Location.Y}px;")">
     <div class="position-relative">
         @if (Player.IsAlive)
         {
