--- a/src/Asteroids/Asteroids.Client/Components/Game/KeyboardListener.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Game/KeyboardListener.razor
@@ -3,7 +3,7 @@
 @implements IDisposable
 
 @code {
-    private DotNetObjectReference<KeyboardListener> objectReference;
+    private DotNetObjectReference<KeyboardListener>? objectReference;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
