use guids for lobby ids

--- a/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
+++ b/src/Asteroids/Asteroids.Client/Components/Pages/LobbyPage.razor
@@ -1,6 +1,6 @@
 ﻿@layout AuthenticatedLayout
 @using Asteroids.Shared.GameStateEntities
-@page "/lobbies/{LobbyId:long}"
+@page "/lobbies/{LobbyId}"
 @inject NavigationManager Navigation
 @inject SessionService SessionService
 @inject IToastService ToastService
